[package]
name = "reshart"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
walkdir = "2.5"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
clap = { version = "4.4", features = ["derive"] }